Add default public port HTTP tunnels
